# computational_modeling

./: .gitignore  Cargo.toml  random_walks.html  random_walks_end.html  random_walks_end_dist.html
src/: bernoulli_experiment.rs  data_utils.rs  main.rs  models.rs
