[package]
name = "modeling_covid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
plotly = "0.8.4"
polars = "0.33.2"
polars-core = "0.33.2"
polars-io = "0.33.2"
rand = "0.8.5"
reqwest = { version = "0.11.14", optional = false, features = ["blocking"] }
